// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox component should render disabled state with default size medium correctly 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "opacity": 1,
    }
  }
  testID="checkbox"
>
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "bottom": 2,
        "left": 2,
        "position": "absolute",
        "right": 2,
        "top": 2,
      }
    }
  />
  <View
    accessibilityState={
      Object {
        "disabled": true,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={false}
    hitSlop={
      Object {
        "bottom": 10,
        "left": 10,
        "right": 10,
        "top": 10,
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
          undefined,
          Object {
            "backgroundColor": undefined,
          },
        ]
      }
    >
      <View
        style={
          Array [
            undefined,
            undefined,
            undefined,
          ]
        }
      >
        <View />
      </View>
    </View>
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "#181C32",
          "fontFamily": "BeVietnamPro-Light",
          "fontSize": 15,
        },
        Object {
          "color": "#D1D4DB",
        },
        Object {
          "marginLeft": 8,
        },
      ]
    }
  >
    Label
  </Text>
</View>
`;

exports[`Checkbox component should render disabled state with size small correctly 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "opacity": 1,
    }
  }
  testID="checkbox"
>
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "bottom": 2,
        "left": 2,
        "position": "absolute",
        "right": 2,
        "top": 2,
      }
    }
  />
  <View
    accessibilityState={
      Object {
        "disabled": true,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={false}
    hitSlop={
      Object {
        "bottom": 10,
        "left": 10,
        "right": 10,
        "top": 10,
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
          undefined,
          Object {
            "backgroundColor": undefined,
          },
        ]
      }
    >
      <View
        style={
          Array [
            undefined,
            undefined,
            undefined,
          ]
        }
      >
        <View />
      </View>
    </View>
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "#181C32",
          "fontFamily": "BeVietnamPro-Light",
          "fontSize": 13,
        },
        Object {
          "color": "#D1D4DB",
        },
        Object {
          "marginLeft": 8,
        },
      ]
    }
  >
    Label
  </Text>
</View>
`;

exports[`Checkbox component should render disabled-auto-selected state with default size medium correctly 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "opacity": 1,
    }
  }
  testID="checkbox"
>
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "bottom": 2,
        "left": 2,
        "position": "absolute",
        "right": 2,
        "top": 2,
      }
    }
  />
  <View
    accessibilityState={
      Object {
        "disabled": true,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={false}
    hitSlop={
      Object {
        "bottom": 10,
        "left": 10,
        "right": 10,
        "top": 10,
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
          undefined,
          Object {
            "backgroundColor": undefined,
          },
        ]
      }
    >
      <View
        style={
          Array [
            undefined,
            undefined,
            undefined,
          ]
        }
      >
        <View />
      </View>
    </View>
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "#181C32",
          "fontFamily": "BeVietnamPro-Light",
          "fontSize": 15,
        },
        Object {
          "color": "#181C32",
        },
        Object {
          "marginLeft": 8,
        },
      ]
    }
  >
    Label
  </Text>
</View>
`;

exports[`Checkbox component should render indeterminate state with default size medium correctly 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "opacity": 1,
    }
  }
  testID="checkbox"
>
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "bottom": 2,
        "left": 2,
        "position": "absolute",
        "right": 2,
        "top": 2,
      }
    }
  />
  <View
    accessibilityState={
      Object {
        "disabled": true,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={false}
    hitSlop={
      Object {
        "bottom": 10,
        "left": 10,
        "right": 10,
        "top": 10,
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
          undefined,
          Object {
            "backgroundColor": undefined,
          },
        ]
      }
    >
      <View
        style={
          Array [
            undefined,
            undefined,
            undefined,
          ]
        }
      >
        <View />
      </View>
    </View>
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "#181C32",
          "fontFamily": "BeVietnamPro-Light",
          "fontSize": 15,
        },
        Object {
          "color": "#181C32",
        },
        Object {
          "marginLeft": 8,
        },
      ]
    }
  >
    Label
  </Text>
</View>
`;

exports[`Checkbox component should render selected state with default size medium correctly 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "opacity": 1,
    }
  }
  testID="checkbox"
>
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "bottom": 2,
        "left": 2,
        "position": "absolute",
        "right": 2,
        "top": 2,
      }
    }
  />
  <View
    accessibilityState={
      Object {
        "disabled": true,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={false}
    hitSlop={
      Object {
        "bottom": 10,
        "left": 10,
        "right": 10,
        "top": 10,
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
          undefined,
          Object {
            "backgroundColor": undefined,
          },
        ]
      }
    >
      <View
        style={
          Array [
            undefined,
            undefined,
            undefined,
          ]
        }
      >
        <View />
      </View>
    </View>
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "#181C32",
          "fontFamily": "BeVietnamPro-Light",
          "fontSize": 15,
        },
        Object {
          "color": "#181C32",
        },
        Object {
          "marginLeft": 8,
        },
      ]
    }
  >
    Label
  </Text>
</View>
`;

exports[`Checkbox component should render unselect state with default size medium correctly 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "opacity": 1,
    }
  }
  testID="checkbox"
>
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "bottom": 2,
        "left": 2,
        "position": "absolute",
        "right": 2,
        "top": 2,
      }
    }
  />
  <View
    accessibilityState={
      Object {
        "disabled": true,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={false}
    hitSlop={
      Object {
        "bottom": 10,
        "left": 10,
        "right": 10,
        "top": 10,
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
          undefined,
          Object {
            "backgroundColor": undefined,
          },
        ]
      }
    >
      <View
        style={
          Array [
            undefined,
            undefined,
            undefined,
          ]
        }
      >
        <View />
      </View>
    </View>
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "#181C32",
          "fontFamily": "BeVietnamPro-Light",
          "fontSize": 15,
        },
        Object {
          "color": "#181C32",
        },
        Object {
          "marginLeft": 8,
        },
      ]
    }
  >
    Label
  </Text>
</View>
`;
